              C++ implementation when size % 4 >= 2 (Olivier Gillet via Stack)

  IMPROVEMENTS
   HBASE-1961 HBase EC2 scripts
   HBASE-1970 Export does one version only; make it configurable how many
              it does
   HBASE-1975 SingleColumnValueFilter: Add ability to match the value of
              previous versions of the specified column
              (Jeremiah Jacquet via Stack)

Release 0.20.2 - November 18th, 2009
  INCOMPATIBLE CHANGES

  BUG FIXES
   HBASE-1905  Remove unused config. hbase.hstore.blockCache.blockSize
   HBASE-1906  FilterList of prefix and columnvalue not working properly
               with deletes and multiple values
   HBASE-1896  WhileMatchFilter.reset should call encapsulated filter reset
   HBASE-1912  When adding a secondary index to an existing table, it will
               cause NPE during re-indexing (Mingjui Ray Liao via Andrew
               Purtell)
   HBASE-1917  TestScanner.testFilters failing
   HBASE-1908  ROOT not reassigned if only one regionserver left
   HBASE-1916  FindBugs and javac warnings cleanup
   HBASE-1924  MapReduce Driver lost hsf2sf backporting hbase-1684
   HBASE-1777  column length is not checked before saved to memstore
   HBASE-1895  HConstants.MAX_ROW_LENGTH is incorrectly 64k, should be 32k
   HBASE-1925  IllegalAccessError: Has not been initialized (getMaxSequenceId)
   HBASE-1929  If hbase-default.xml is not in CP, zk session timeout is 10
               seconds
   HBASE-1927  Scanners not closed properly in certain circumstances
   HBASE-1934  NullPointerException in ClientScanner (Andrew Purtell via Stack)
   HBASE-1946  Unhandled exception at regionserver (Dmitriy Lyfar via Stack)
   HBASE-1941  Put's copy feature has a bug (Dave Latham via Stack) 
   HBASE-1682  IndexedRegion does not properly handle deletes
               (Andrew McCall via Clint Morgan and Stack)
   HBASE-1953  Overhaul of overview.html (html fixes, typos, consistency) -